# libfprint-vfs_proprietary-driver

./: .gitignore  .gitmodules  .travis.yml  README.md  meson.build
.ci/: before_script  install  script
vfs_proprietary/: assert.h  capture_helper.c  capture_helper.h  likely.h  meson.build  min_max.h  pp_narg.h  trace.h  union_of_struct_n_array.h  vfs_proprietary.c  vfs_proprietary.h
vfs_proprietary/capture-helper/: api.h  main.c  vfsFprintWrapper.h
